[package]
name = "rustle-parse"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "A specialized YAML and inventory parser for Ansible-compatible playbooks"
license = "GPL-3.0"
repository = "https://github.com/iepathos/rustle-parse"
keywords = ["ansible", "yaml", "parser", "playbook", "automation"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "rustle-parse"
path = "src/bin/rustle-parse.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Template engine
minijinja = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "macros"] }

# Graph algorithms for dependency resolution
petgraph = "0.8"

# Text processing
regex = "1"

# Cryptography for vault support
base64 = "0.22"
sha2 = "0.10"

# INI parsing for inventory files
configparser = "3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Lazy static for compiled regexes
once_cell = "1.21"

[dev-dependencies]
# Testing
proptest = "1"
mockall = "0.13"
criterion = "0.6"
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

